--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,30 @@
     package="com.polizi.iam.polizi">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!--
+GET_ACCOUNTS is only required for GCM on devices running Android lower than
+4.0.4. You may leave out this permission if you are targetting 4.0.4+.
+-->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
+    <!--
+    IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
+    to match your app's package name + ".permission.C2D_MESSAGE".
+    -->
+    <permission android:protectionLevel="signature"
+        android:name="com.polizi.iam.polizi" />
+    <uses-permission android:name="com.polizi.iam.polizi" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".App">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -19,6 +37,35 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="com.parse.PushService" />
+        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.parse.push.intent.RECEIVE" />
+                <action android:name="com.parse.push.intent.DELETE" />
+                <action android:name="com.parse.push.intent.OPEN" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <!--
+                IMPORTANT: Change "com.parse.starter" to match your app's package name.
+                -->
+                <category android:name="com.polizi.iam.polizi" />
+            </intent-filter>
+        </receiver>
+
+        <!--
+        IMPORTANT: Change "YOUR_SENDER_ID" to your GCM Sender Id.
+        -->
+        <meta-data android:name="com.parse.push.gcm_sender_id"
+            android:value="id:885391099200" />
+
     </application>
 
 </manifest>
