--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary true
     }
     buildTypes {
         release {
@@ -31,9 +32,19 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-appindexing:10.0.0'
+
+}
+
+dependencies {
+    compile 'com.google.android.gms:play-services:10.0.1'
 }
 
 
 
 
+dependencies {
+    compile 'com.android.support:support-v4:24.+'
+    compile 'com.android.support:support-vector-drawable:24.+'
+}
 apply plugin: 'com.google.gms.google-services'
