--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,14 +200,17 @@ GET_ACCOUNTS is only required for GCM on devices running Android lower than
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <service
             android:name=".service.LocationService"
             android:externalService="false" />
 
         <activity
             android:name=".settings.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+            android:label="@string/title_activity_settings" />
+        <!--
+                <service
+                    android:name=".service.LocationUpdateService"
+                    android:exported="false"></service>-->
     </application>
 
 </manifest>
