--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,18 +33,9 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.google.firebase:firebase-appindexing:10.0.0'
-
-}
-
-dependencies {
-    compile 'com.google.android.gms:play-services:10.0.1'
-}
-
-
-
-
-dependencies {
-    compile 'com.android.support:support-v4:24.+'
     compile 'com.android.support:support-vector-drawable:24.+'
 }
-apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+    compile 'com.android.support:support-vector-drawable:24.+'
+}
